2001-10-05  Sven Wischnowsky  <wischnow@zsh.org>

	* 15946: Src/Zle/compresult.c: fix calculation of number of
	columns needed with list_packed

	* 15945: Completion/Zsh/Command/_cd: make _cd use only one call
	to _alternative, including completions from _tilde (using the
	named-directories tag)

	* 15944: Completion/Unix/Type/_path_files, Doc/Zsh/compsys.yo:
	make expand style (file completion) work again; no more special
	behaviour with menu completion; try to make docs clearer

2001-10-05  Geoff Wing  <gcw@zsh.org>

	* unposted: Doc/Zsh/options.yo: typo

2001-10-05  Clint Adams  <clint@zsh.org>

	* 15941: Completion/Unix/Command/_mount:
	complete reiserfs mount options.

	* 15940: Completion/Unix/Command/_mount:
	complete -o utf8 for mount -t vfat.

	* 15939: Completion/Unix/Command/_mount:
	complete xfs mount options (for Linux).

	* 15938: Completion/Unix/Command/_mount:
	complete ext3 mount options.

2001-10-02  Clint Adams  <clint@zsh.org>

	* 15919: Src/linklist.c, Src/Modules/tcp.c, Src/Modules/tcp.h:
	use LinkLists in tcp module rather than somewhat equivalent code.

2001-10-01  Peter Stephenson  <pws@csr.com>

	* 15917: Test/C03traps.ztst: test for EXIT trap fix in 15844.

2001-09-30  Clint Adams  <clint@zsh.org>

	* 15915: Completion/Debian/Command/_bts:
	completion for bts script in devscripts.

2001-09-28  Bart Schaefer  <schaefer@zsh.org>

	* 15895: Src/Modules/zftp.c: Control-connection management sanity
	in conjunction with the new zsh/net/tcp module.

	* 15889: Test/V01zmodload.ztst: Compute module dependencies for
	external modules so that they can be unloaded in the right order.

2001-09-27  Oliver Kiddle  <opk@zsh.org>

	* 15882: zshconfig.ac, Etc/MACHINES, Test/C02cond.ztst: fix
	build and test problems on MacOS X (Darwin).

2001-09-27  Clint Adams  <clint@zsh.org>

	* 15886: Src/Modules/tcp.c: use select if poll
	is not available, or complain if neither are
	available.

2001-09-27  Peter Stephenson  <pws@csr.com>
