@@ -716,6 +716,24 @@ ifnzman(noderef(Prompt Expansion))\
 )
 enditem()
 )
+findex(printf)
+item(tt(printf) var(format) [ var(arg) ... ])(
+Print the arguments according to the format specification. Formatting
+rules are the same as used in C. The same escape sequences as for tt(echo)
+are recognised in the format. All C format specifications ending in one of
+csdiouxXeEfgG are handled. In addition to this, `tt(%b)' can be used
+instead of `tt(%s)' to cause escape sequences in the argument to be
+recognised and `tt(%q)' can be used to quote the argument in such a way
+that allows it to be reused as shell input. With the numeric format
+specifiers, if the corresponding argument starts with a quote character,
+the numeric value of the following character is used as the number to
+print.
+
+If arguments remain unused after formatting, the format string is reused
+until all arguments have been consumed. If more arguments are required by
+the format than have been specified, the behaviour is as if zero or an
+empty string had been specified as the argument.
+)
 findex(pushd)
 pindex(PUSHD_TO_HOME, use of)
 pindex(PUSHD_MINUS, use of)
